--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "turbo": "^2.4.4",
     "typescript": "^5.8.2",
     "vitest": "^3.0.8",
-    "vitest-browser-react": "^0.1.1"
+    "vitest-browser-react": "^0.1.1",
+    "vitest-fetch-mock": "^0.4.5"
   },
   "bugs": {
     "url": "https://github.com/liveblocks/frimousse/issues"
