--- a/site/package.json
+++ b/site/package.json
@@ -29,7 +29,7 @@
     "frimousse": "file:../",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
-    "next": "15.3.0-canary.10",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
